# NinjaBotkick

./: .env  .env.example  .gitignore  DaiBot.ts  KICK_PLAN.md  PACK_FOR_DISTRIBUTION.bat  README.md  RUN_BOT.bat  autorun.sh  comandos.html  culoconkkrix.js  login.js  make-comandos.sh  ninjabot.html  ninjabot.js  package-lock.json  package.json  tsconfig.json  tts_server.py  types.d.ts
.deepseek/: instructions.md
backend/: Cargo.toml
backend/data/: queue.json
backend/src/: config.rs  cooldown.rs  main.rs
backend/src/commands/: mod.rs
backend/src/kick/: api.rs  mod.rs  sender.rs
backend/src/queue/: mod.rs
backend/src/server/: mod.rs
backend/src/stats/: mod.rs
backend/src/tts/: edge_tts.rs  mod.rs
login/: login.js  package-lock.json  package.json
overlay/: app.js  glass.html  index.html  panel.html  pixel.html
public/: app.js  glass.html  index.html  pixel.html  style.css
scripts/: run.sh
