[package]
name = "daibot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "daibot"
path = "src/main.rs"

[dependencies]
axum            = "0.7"
socketioxide    = "0.14"
tokio           = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
reqwest         = { version = "0.12", features = ["json", "rustls-tls"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
dotenvy         = "0.15"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sysinfo         = "0.31"
tower-http      = { version = "0.5", features = ["fs"] }
futures-util    = "0.3"
base64          = "0.22"
uuid            = { version = "1", features = ["v4"] }
chrono          = "0.4"
url             = "2"
